# Orthrus

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rustfmt.toml
.github/workflows/: build.yml  rust.yml
alloc/: Cargo.toml
crates/core/: Cargo.toml  README.md
crates/core/src/: certificate.rs  data.rs  error.rs  identify.rs  lib.rs  prelude.rs  take.rs  time.rs  util.rs  vfs.rs
crates/godot/: Cargo.toml
crates/godot/src/: lib.rs  pck.rs  prelude.rs
crates/helper/: Cargo.toml
crates/helper/src/: certificate.rs  data.rs  error.rs  lib.rs  time.rs  vfs.rs
crates/jsystem/: Cargo.toml
crates/jsystem/src/: error.rs  lib.rs  prelude.rs  rarc.rs  rarc2.rs
crates/ncompress/: Cargo.toml
crates/ncompress/src/: algorithms.rs  lib.rs  lz11.rs  prelude.rs  yay0.rs  yaz0.rs
crates/nintendoware/: Cargo.toml
crates/nintendoware/src/: error.rs  lib.rs  prelude.rs  switch.rs
crates/nintendoware/src/rvl/: common.rs  mod.rs  stream.rs
crates/panda3d/: Cargo.toml
crates/panda3d/src/: bam.rs  bam2.rs  bevy.rs  bevy2.rs  bevy_sgi.rs  common.rs  error.rs  lib.rs  multifile.rs  multifile2.rs  prelude.rs  subfile.rs
crates/panda3d/src/nodes/: anim_bundle.rs  anim_bundle_node.rs  anim_channel_matrix.rs  anim_channel_matrix_transform_table.rs  anim_group.rs  anim_interface.rs  auto_texture_scale.rs  billboard_effect.rs  bounding_volume.rs  character.rs  character_joint.rs  character_joint_effect.rs  collision_capsule.rs  collision_node.rs  collision_plane.rs  collision_polygon.rs  collision_solid.rs  collision_sphere.rs  color_attrib.rs  cull_bin_attrib.rs  cull_face_attrib.rs  decal_effect.rs  depth_write_attrib.rs  dispatch.rs  geom.rs  geom_enums.rs  geom_node.rs  geom_primitive.rs  geom_tristrips.rs  geom_vertex_anim_spec.rs  geom_vertex_array_data.rs  geom_vertex_array_format.rs  geom_vertex_column.rs  geom_vertex_data.rs  geom_vertex_format.rs  internal_name.rs  joint_vertex_transform.rs  lod_node.rs  mod.rs  model_node.rs  (+22 more)
crates/windows/: Cargo.toml
crates/windows/src/: lib.rs  pe.rs
crates/yaz0/: Cargo.toml
crates/yaz0/src/: lib.rs
examples/assets/: README.md  tobudx.yay0_n64  tobudx.yaz0_n64
helper/: Cargo.toml
helper/src/: lib.rs
src/: identify.rs  main.rs  menu.rs
src/menu/: godot.rs  j_system.rs  jsystem.rs  mod.rs  n_compress.rs  ncompress.rs  nintendo_ware.rs  nintendoware.rs  panda3d.rs
yaz0/: Cargo.toml
yaz0/src/: lib.rs
