[package]
name = "orthrus"
version = "0.2.0"
authors = ["NWPlayer123 <nikki@aetheria.dev>"]
edition = "2021"
description = "A new way to modify games."
readme = "README.md"
repository = "https://github.com/NWPlayer123/Orthrus"
license = "MIT OR Apache-2.0"
keywords = ["modding", "gamedev"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
orthrus-core = { version = "0.2", path = "crates/core", features = ["time"] }
orthrus-jsystem = { version = "0.1", path = "crates/jsystem" }
orthrus-panda3d = { version = "0.1", path = "crates/panda3d", features = ["identify"] }
orthrus-ncompress = { version = "0.2", path = "crates/ncompress" }
orthrus-nintendoware = { version = "0.1", path = "crates/nintendoware" }

argp = { version = "0.3", default-features = false, git = "https://github.com/jirutka/argp.git" }
env_logger = { version = "0.11", default-features = false }
log = "0.4"
owo-colors = "4.0"
paste = "1.0"
anyhow = "1.0"


[workspace]
members = ["crates/*"]

# Workspace members should have their own details, e.g. a version bump on yaz0 should not
# necessarily require a version bump on all other modules, along with their own authors since this
# repo will get very large in the future, with different people focusing on features in a specific
# module
[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/NWPlayer123/Orthrus"
