[package]
name = "orthrus"
version = "0.2.0"
authors = ["NWPlayer123 <nikki@aetheria.dev>"]
edition = "2021"
description = "A new way to modify games."
readme = "README.md"
repository = "https://github.com/NWPlayer123/Orthrus"
license = "MPL-2.0"
keywords = ["modding", "gamedev"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
orthrus-core = { workspace = true, features = ["time"] }
orthrus-godot = { workspace = true }
orthrus-jsystem = { workspace = true }
orthrus-ncompress = { workspace = true }
orthrus-nintendoware = { workspace = true }
orthrus-panda3d = { workspace = true, features = ["identify"] }

paste = { workspace = true }

argp = { version = "0.4", default-features = false }
env_logger = { version = "0.11", default-features = false }
anyhow = { version = "1.0", default-features = false }

log = "0.4"
owo-colors = "4.1"
mimalloc = "0.1"

[workspace]
members = ["crates/*"]

# Workspace members should have their own details, e.g. a version bump on yaz0 should not
# necessarily require a version bump on all other modules, along with their own authors since this
# repo will get very large in the future, with different people focusing on features in a specific
# module
[workspace.package]
license = "MPL-2.0"
repository = "https://github.com/NWPlayer123/Orthrus"

[workspace.dependencies]
orthrus-core = { version = "0.3", path = "crates/core" }
orthrus-godot = { version = "0.1", path = "crates/godot" }
orthrus-jsystem = { version = "0.1", path = "crates/jsystem" }
orthrus-ncompress = { version = "0.2", path = "crates/ncompress" }
orthrus-nintendoware = { version = "0.1", path = "crates/nintendoware" }
orthrus-panda3d = { version = "0.1", path = "crates/panda3d" }
orthrus-windows = { version = "0.1", path = "crates/windows" }

snafu = { version = "0.8", default-features = false, features = ["rust_1_81"] }
num_enum = { version = "0.7", default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }

bitflags = "2.6"
hashbrown = "0.15"
paste = "1.0"
smallvec = { version = "1.13", features = ["union"] }
