[package]
name = "orthrus-core"
version = "0.2.0"
edition = "2021"
description = "Provides core functionality for Orthrus"
license.workspace = true
repository.workspace = true

[dependencies]
snafu = { version = "0.7", default-features = false }

time = { version = "0.3", features = ["formatting", "macros", "local-offset"], optional = true }

der = { version = "0.7", optional = true }
x509-cert = { version = "0.2", optional = true }

[features]
default = ["std"]
std = ["snafu/std"]
time = ["dep:time", "std"]
certificate = ["der", "x509-cert"]