[package]
name = "orthrus-core"
version = "0.2.0"
edition = "2021"
description = "Provides core functionality for Orthrus"
license.workspace = true
repository.workspace = true

[dependencies]
snafu = { version = "0.8", default-features = false }

# Required for time module
time = { version = "0.3", features = ["local-offset"], optional = true }

# Required for certificate module
der = { version = "0.7", optional = true }
x509-cert = { version = "0.2", optional = true }

[features]
default = ["std"]
std = []
time = ["dep:time"]
certificate = ["der", "x509-cert"]