[package]
name = "orthrus-core"
version = "0.3.0"
edition = "2021"
description = "Provides core functionality for Orthrus"
license.workspace = true
repository.workspace = true

[dependencies]
snafu = { version = "0.8", default-features = false, features = ["rust_1_81"] }

# Required for time module
time = { version = "0.3", features = ["local-offset"], optional = true }

# Required for certificate module
der = { version = "0.7", optional = true }
x509-cert = { version = "0.2", optional = true }

[features]
default = ["std"]
alloc = []
std = ["alloc", "snafu/std", "time?/std"]
time = ["dep:time"]
certificate = ["der", "x509-cert"]