[package]
name = "orthrus-godot"
version = "0.1.0"
edition = "2021"
description = "Orthrus module supporting the Godot game engine"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
orthrus-core = { workspace = true }
orthrus-windows = { workspace = true }
snafu = { workspace = true }

[features]
default = ["std"]
std = []
