[package]
name = "orthrus-godot"
version = "0.1.0"
description = "Orthrus module supporting the Godot game engine"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orthrus-core = { workspace = true }
orthrus-windows = { workspace = true }
snafu = { workspace = true }

[features]
default = ["std"]
std = []
