[package]
name = "orthrus-helper"
version = "0.2.0"
edition = "2021"
description = "Helper module for Orthrus"
license.workspace = true
repository.workspace = true

[dependencies]
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
hashbrown = "0.14"
thiserror = "1.0"
log = "0.4"