[package]
name = "orthrus-jsystem"
version = "0.1.0"
edition = "2021"
description = "Orthrus module supporting the Nintendo JSystem framework"
license.workspace = true
repository.workspace = true

[dependencies]
orthrus-core = { version = "0.3", path = "../core" }

snafu = { version = "0.8", default-features = false, features = ["rust_1_81"] }
#yaml-peg = { version = "1.0", default-features = false }

bitflags = "2.6"

[features]
default = ["std"]
std = []#"yaml-peg/std"]
