[package]
name = "orthrus-jsystem"
version = "0.1.0"
edition = "2021"
description = "Orthrus module supporting the Nintendo JSystem framework"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
orthrus-core = { workspace = true }
snafu = { workspace = true }
bitflags = { workspace = true }
#yaml-peg = { version = "1.0", default-features = false }

[features]
default = ["std"]
std = []#"yaml-peg/std"]
