[package]
name = "orthrus-ncompress"
version = "0.2.1"
edition = "2021"
description = "Orthrus module supporting Nintendo compression formats"
license.workspace = true
repository.workspace = true

[dependencies]
orthrus-core = { version = "0.3", path = "../core" }

snafu = { version = "0.8", default-features = false, features = ["rust_1_81"] }

[features]
default = ["std"]
std = []
