[package]
name = "orthrus-ncompress"
version = "0.2.1"
edition = "2021"
description = "Orthrus module supporting Nintendo compression formats"
license.workspace = true
repository.workspace = true

[dependencies]
orthrus-core = { workspace = true }
snafu = { workspace = true }

[features]
default = ["std"]
std = []
