[package]
name = "orthrus-ncompress"
version = "0.2.2"
description = "Orthrus module supporting Nintendo compression formats"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orthrus-core = { workspace = true }
snafu = { workspace = true }

[features]
default = ["std"]
std = []
