[package]
name = "orthrus-nintendoware"
version = "0.1.0"
edition = "2021"
description = "Orthrus module supporting NintendoWare targets"
license.workspace = true
repository.workspace = true

[dependencies]
orthrus-core = { version = "0.3", path = "../core" }

snafu = { version = "0.8", default-features = false, features = ["rust_1_81"] }
num_enum = { version = "0.7", default-features = false }

bitflags = "2.6"

[features]
default = ["std"]
std = ["snafu/std"]
