[package]
name = "orthrus-nintendoware"
version = "0.1.0"
edition = "2021"
description = "Orthrus module supporting NintendoWare targets"
license.workspace = true
repository.workspace = true

[dependencies]
orthrus-core = { workspace = true }
snafu = { workspace = true }
bitflags = { workspace = true }
num_enum = { workspace = true }

[features]
default = ["std"]
std = ["snafu/std"]
