[package]
name = "orthrus-nintendoware"
version = "0.1.0"
description = "Orthrus module supporting NintendoWare targets"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orthrus-core = { workspace = true }
snafu = { workspace = true }
bitflags = { workspace = true }
num_enum = { workspace = true }

[features]
default = ["std"]
std = ["snafu/std"]
