[package]
name = "orthrus-panda3d"
version = "0.1.0"
edition = "2021"
description = "Orthrus module supporting the Panda3D engine"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
orthrus-core = { workspace = true, features = ["time"] }
snafu = { workspace = true }
num_enum = { workspace = true }
hashbrown = { workspace = true }
bitflags = { workspace = true }
paste = { workspace = true }

approx = { version = "0.5", default-features = false }
bevy_tasks = "0.15"
bevy_transform = { version = "0.15", default-features = false }
bevy_math = { version = "0.15", default-features = false, features = [
    "approx",
] }

# Bevy-Specific Assets
#bevy_mod_billboard = "0.7"
serde = { version = "1.0", optional = true, features = ["derive"] }
smallvec = { workspace = true, optional = true }

[dependencies.bevy_internal]
version = "0.15"
optional = true
default-features = false
features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_color",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "jpeg",
    "png",
]

[features]
default = ["std"]
std = ["snafu/std"]
signature = ["orthrus-core/certificate"]
bevy = ["bevy_internal", "serde", "smallvec"]
identify = []
