[package]
name = "orthrus-panda3d"
version = "0.1.0"
description = "Orthrus module supporting the Panda3D engine"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
orthrus-core = { workspace = true, features = ["time"] }
snafu = { workspace = true }
num_enum = { workspace = true }
hashbrown = { workspace = true }
bitflags = { workspace = true }
paste = { workspace = true }
log = { workspace = true }

approx = { version = "0.5", default-features = false }
bevy_transform = { version = "0.16.0-rc.4", default-features = false }
bevy_math = { version = "0.16.0-rc.4", default-features = false, features = [
    "approx",
    "libm",
] }

# Bevy-Specific Assets
bevy_animation = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_app = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_asset = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_color = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_ecs = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_image = { version = "0.16.0-rc.4", default-features = false, optional = true }
#bevy_log = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_pbr = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_reflect = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_render = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_scene = { version = "0.16.0-rc.4", default-features = false, optional = true }
bevy_tasks = { version = "0.16.0-rc.4", default-features = false, optional = true }
#bevy_mod_billboard = "0.7"
tracing = "0.1"
serde = { version = "1", optional = true, features = ["derive"] }
smallvec = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["bevy_math/std", "snafu/std"]
signature = ["orthrus-core/certificate"]
bevy = [
    "bevy_animation",
    "bevy_app",
    "bevy_asset",
    "bevy_color",
    "bevy_ecs",
    "bevy_image",
    #"bevy_log",
    "bevy_pbr",
    "bevy_reflect",
    "bevy_render",
    "bevy_scene",
    "bevy_tasks",
    "serde",
    "smallvec",
]
identify = []
