[package]
name = "orthrus-windows"
version = "0.1.0"
edition = "2021"
description = "Orthrus module supporting Microsoft Windows formats"
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = { workspace = true }
zerocopy = { workspace = true }

[features]
default = ["std"]
std = ["zerocopy/std"] #, "snafu/std", "orthrus-core/std"]
